// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`STEM tool render goldens (default state) > renders + pins a digest for accessLens 1`] = `
{
  "buttons": 8,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "caaf192ade0f0aad",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquacultureLab 1`] = `
{
  "buttons": 182,
  "inputs": 2,
  "lengthBucket": 578,
  "sha": "eb21f607bef2c516",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for aquarium 1`] = `
{
  "buttons": 28,
  "inputs": 0,
  "lengthBucket": 162,
  "sha": "fa923a630377922e",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for behaviorLab 1`] = `
{
  "buttons": 19,
  "inputs": 4,
  "lengthBucket": 57,
  "sha": "4fa76e42b98b88af",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for cellularLab 1`] = `
{
  "buttons": 52,
  "inputs": 3,
  "lengthBucket": 131,
  "sha": "6019ff100dd5881a",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for climateExplorer 1`] = `
{
  "buttons": 40,
  "inputs": 0,
  "lengthBucket": 171,
  "sha": "bccd1ceaad8280c8",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for ecosystem 1`] = `
{
  "buttons": 47,
  "inputs": 11,
  "lengthBucket": 220,
  "sha": "61679b8daec2b564",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for evoLab 1`] = `
{
  "buttons": 28,
  "inputs": 0,
  "lengthBucket": 191,
  "sha": "7b6c554a15d311b5",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geologyExplorer 1`] = `
{
  "buttons": 50,
  "inputs": 2,
  "lengthBucket": 189,
  "sha": "e8140419eef208ff",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for geometryWorld 1`] = `
{
  "buttons": 0,
  "inputs": 0,
  "lengthBucket": 3,
  "sha": "b8a99a790463ce28",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for musicSynth 1`] = `
{
  "buttons": 121,
  "inputs": 15,
  "lengthBucket": 261,
  "sha": "0a169e90531dd13b",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for opticsLab 1`] = `
{
  "buttons": 35,
  "inputs": 0,
  "lengthBucket": 113,
  "sha": "86dc5aab1eb25ee0",
  "svgs": 0,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for spaceColony 1`] = `
{
  "buttons": 16,
  "inputs": 7,
  "lengthBucket": 101,
  "sha": "80e13d585be362af",
  "svgs": 1,
}
`;

exports[`STEM tool render goldens (default state) > renders + pins a digest for worldBuilder 1`] = `
{
  "buttons": 15,
  "inputs": 7,
  "lengthBucket": 63,
  "sha": "8f1673852c4a7994",
  "svgs": 1,
}
`;
